2004-06-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test005.cxx, test/test006.cxx:
  - Added rows ending in empty-string fields, thanks slava@perlx.com
2004-06-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transaction_base.hxx:
  - Removed erroneous "throw ()" for EndCopyWrite(), thanks Simon Elbaz
  - Experimental version of exec() taking a stringstream
 src/connection_base.cxx:
  - Trimmed some fat, possible bug out of EndCopyWrite()
 src/result.cxx:
  - Accepts null query string
 src/tablestream.cxx:
  - Made base_close() idempotent, or at least more obviously so
2004-05-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/result.hxx, src/util.cxx:
  - Workarounds for the infamous non-release "gcc 2.96", thanks Arjen Baart
 libpqxx.spec.in:
  - Added --enable-shared (Arjen Baart)
2004-05-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Strip newlines off COPY TO STDOUT lines in old-libpq code
 src/tablereader.cxx:
  - Fix parse error when line ends in empty field.  Thanks slava@perlx.com!
2004-05-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx, src/pipeline.cxx:
  - Made prepended "SELECT 0" query explicit to pave way for partial retrieval
  - Syntax error reporting tries to narrow down problematic query
 include/pqxx/tablestream.hxx:
  - Made columnlist() use new separated_list()
 include/pqxx/util.hxx:
  - New class template items<> to make container initialization easy
  - separated_list() generates comma/semicolon/...-separated lists
 src/transaction_base.cxx:
  - No longer go async in BeginCopyWrite()
 test/test008.cxx, test/test010.cxx:
  - Use separated_list() instead of output loop
 test/test010.cxx, test/test080.cxx:
  - Use items<> instead of hand-filling containers
2004-05-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx, src/result.cxx:
  - Added errorposition()
 README:
  - Added KPoGre to list of libpqxx-based projects
2004-05-13  Jeroen T. Vermeulen <jtv@xs4all.nl>